--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.12",
+    "@react-google-maps/api": "^2.19.3",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-google-places-autocomplete": "^4.0.1",
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "stripe": "^15.8.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.5"
   }
 }
