--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "20.12.12",
+    "gh": "^2.8.9",
+    "pages": "^0.0.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.5"
