--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://LuhMsibi.github.io/Uber-Clone",
+  "homepage": "https://LuhMsibi.github.io/uber-clone2",
   "name": "uber-clone",
   "version": "0.1.0",
   "private": true,
